crates/launcher/src/snapshots/telmo_launcher__ui__tests__app_search.snap
---
source: crates/launcher/src/ui.rs
expression: out
---
╭────────────────────────────────────────────────────────────────╮
│ zen                                                       apps │
├────────────────────────────────────────────────────────────────┤
│▌ ▀▀ Zen Browser  ●                                        fn W │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
╰────────────────────────────────────────────────────────────────╯
 ↵ open  ! commands  ? web  esc close
