crates/launcher/src/snapshots/telmo_launcher__ui__tests__commands.snap
---
source: crates/launcher/src/ui.rs
expression: render(&f)
---
╭────────────────────────────────────────────────────────────────╮
│ !                                                     commands │
├────────────────────────────────────────────────────────────────┤
│▌ 󰖩  Wi-Fi                                                      │
│  󰂯  Bluetooth                                                  │
│  󰕾  Sound                                                      │
│  󰍹  Displays                                                   │
│  󰁹  Power                                                      │
│  󰅌  Clipboard                                                  │
│  󰕮  System                                                     │
│  󰅐  Clock                                                      │
│    Lock                                                       │
╰────────────────────────────────────────────────────────────────╯
 ↵ run  esc close
