crates/launcher/src/snapshots/telmo_launcher__ui__tests__commands_filtered.snap
---
source: crates/launcher/src/ui.rs
expression: render(&f)
---
╭────────────────────────────────────────────────────────────────╮
│ !sl                                                   commands │
├────────────────────────────────────────────────────────────────┤
│▌ 󰤄  Sleep                                                      │
│  󰍹  Displays                                                   │
│  󰒓  Displays settings                                          │
│  󰒓  Trackpad settings                                          │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
╰────────────────────────────────────────────────────────────────╯
 ↵ run  esc close
