crates/launcher/src/snapshots/telmo_launcher__ui__tests__empty.snap
---
source: crates/launcher/src/ui.rs
expression: render(&f)
---
╭────────────────────────────────────────────────────────────────╮
│   Search apps    ! commands    ? web                    recent │
├────────────────────────────────────────────────────────────────┤
│▌ ▀▀ Ghostty  ●                                            fn T │
│  ▀▀ Zen Browser  ●                                        fn W │
│  ▀▀ Spotify  ●                                            fn S │
│  ▀▀ Telegram  ●                                           fn G │
│  ▀▀ Obsidian  ●                                           fn O │
│  ▀▀ Visual Studio Code                                    fn C │
│                                                                │
│                                                                │
│                                                                │
╰────────────────────────────────────────────────────────────────╯
 ↵ open  ! commands  ? web  esc close
