crates/launcher/src/snapshots/telmo_launcher__ui__tests__initials_highlight.snap
---
source: crates/launcher/src/ui.rs
expression: render(&f)
---
╭────────────────────────────────────────────────────────────────╮
│ vsc                                                       apps │
├────────────────────────────────────────────────────────────────┤
│▌ ▀▀ Visual Studio Code                                    fn C │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
╰────────────────────────────────────────────────────────────────╯
 ↵ open  ! commands  ? web  esc close
