crates/launcher/src/snapshots/telmo_launcher__ui__tests__letter_key_puts_its_app_on_top.snap
---
source: crates/launcher/src/ui.rs
expression: render(&f)
---
╭────────────────────────────────────────────────────────────────╮
│ t                                                         apps │
├────────────────────────────────────────────────────────────────┤
│▌ ▀▀ Ghostty  ●                                            fn T │
│  ▀▀ Telegram  ●                                           fn G │
│  ▀▀ Terminal                                                   │
│  ▀▀ TextEdit                                                   │
│  ▀▀ Thunderbird                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
╰────────────────────────────────────────────────────────────────╯
 ↵ open  ! commands  ? web  esc close
