crates/launcher/src/snapshots/telmo_launcher__ui__tests__math.snap
---
source: crates/launcher/src/ui.rs
expression: out
---
╭────────────────────────────────────────────────────────────────╮
│ 2 ft to cm                                                math │
├────────────────────────────────────────────────────────────────┤
│▌ =  60.96 cm                                          ↵ copies │
│     609.6 mm  ·  0.6096 m  ·  0.00061 km                       │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
╰────────────────────────────────────────────────────────────────╯
 ↵ copy  tab with unit  esc close
