crates/launcher/src/snapshots/telmo_launcher__ui__tests__no_results.snap
---
source: crates/launcher/src/ui.rs
expression: render(&f)
---
╭────────────────────────────────────────────────────────────────╮
│ qzx                                                       apps │
├────────────────────────────────────────────────────────────────┤
│  Nothing matches. ! for commands, ? to search the web.         │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
╰────────────────────────────────────────────────────────────────╯
 ! commands  ? web  esc close
