crates/launcher/src/snapshots/telmo_launcher__ui__tests__restart_asks_first.snap
---
source: crates/launcher/src/ui.rs
expression: render(&f)
---
╭────────────────────────────────────────────────────────────────╮
│ !restart                                              commands │
├────────────────────────────────────────────────────────────────┤
│▌ 󰜉  Restart                                                    │
│         ╭─ Restart swift? ───────────────────────────╮         │
│         │                                            │         │
│         │  Open apps will be asked to close.         │         │
│         │                                            │         │
│         │  ↵ restart   esc cancel                    │         │
│         ╰────────────────────────────────────────────╯         │
│                                                                │
│                                                                │
╰────────────────────────────────────────────────────────────────╯
 ↵ run  esc close
